[gd_scene load_steps=8 format=3 uid="uid://r3owhcskmyxj"]

[ext_resource type="Script" path="res://Assets/Scripts/card.gd" id="1_d2jgv"]
[ext_resource type="Texture2D" uid="uid://d1dql7i0s7b2b" path="res://Assets/Art/ArmyCard.png" id="1_tjms0"]
[ext_resource type="Texture2D" uid="uid://dec0ynxfplrsc" path="res://Assets/Art/CardBack.png" id="3_s7nc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxhmm"]
size = Vector2(242, 351)

[sub_resource type="Animation" id="Animation_0j2k1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBackImg:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBackImg:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImg:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardImg:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EffectTxt:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rogal"]
resource_name = "card_flip"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBackImg:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.1, 0.5), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBackImg:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImg:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardImg:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.1, 0.5), Vector2(0.5, 0.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EffectTxt:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gycua"]
_data = {
"RESET": SubResource("Animation_0j2k1"),
"card_flip": SubResource("Animation_rogal")
}

[node name="Card" type="Node2D"]
position = Vector2(112, 927)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_d2jgv")

[node name="CardBackImg" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_s7nc0")

[node name="CardImg" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tjms0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_kxhmm")

[node name="Attack" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = 85.0
offset_top = -113.0
offset_right = 106.0
offset_bottom = -73.0
scale = Vector2(1.4, 1.4)
text = "0"

[node name="Health" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = -96.25
offset_top = -113.75
offset_right = -75.25
offset_bottom = -73.75
scale = Vector2(1.4, 1.4)
text = "0"

[node name="Energy" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 72.5
offset_top = 67.5
offset_right = 112.5
offset_bottom = 107.5
scale = Vector2(2.5, 2.5)
text = "0"

[node name="EffectTxt" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = -95.0
offset_top = 78.75
offset_right = 58.0
offset_bottom = 164.75
text = "Effect Here"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gycua")
}

[node name="ZoomButton" type="Button" parent="."]
visible = false
offset_left = -33.75
offset_top = -216.25
offset_right = 38.25
offset_bottom = -185.25
text = "Zoom
"

[node name="AttackButton" type="Button" parent="."]
visible = false
offset_left = -33.75
offset_top = -265.0
offset_right = 38.25
offset_bottom = -234.0
text = "Attack"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="ZoomButton" to="." method="_on_zoom_button_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="_on_attack_button_pressed"]
